2004-10-30  Davyd Madeley  <davyd@madeley.id.au>

	* src/preferences.c:
	* src/mc-install-default-macros.c:
	* src/mini-commander.schemas.in:
	* src/mini-commander-global.schemas.in:
	* src/Makefile.am: Make macro list global for all instances of the
	  mini-commander applet. Closes bug #91194.

2004-09-06  Shaun McCance  <shaunm@gnome.org>

	* help/C/command-line-C.omf:
	* help/C/command-line.xml:
	- Updates for 2.8 from Angela Boyle

2004-08-30  Davyd Madeley  <davyd@madeley.id.au>

	* src/mc-default-macros.h: Change "dictionary:" macro to use
	gnome-dictionary.

2004-08-16  Davyd Madeley  <davyd@madeley.id.au>

	* src/exec.c: Removed dependancy on egg-screen-exec.h
	* src/mini-commander_applet.h: Increased max command size to 505 to
	compensate for added (?) that can appear before strings. Closes
	#150058.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* src/Makefile.am: Remove references to screen-exec.
	* src/help.c: (show_help): Use gnome_help_*
	* src/preferences.c: (show_help_section): Same here.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* src/command_line.c: (mc_show_history): use g_signal_connect_*.
	* src/exec.c: (beep): ANSIfication.
	* src/mini-commander_applet.c: (command_line_init_stock_icons):
	ANSIfication.

2004-07-07  Vincent Noel  <vnoel@cox.net>

	* src/command_line.c (mc_command_update_entry_size): use a
	different size requisition for the entry line depending on the
	panel orientation.

	* src/mini-commander_applet.h: added an element to track panel
	orientation to the MCData struct.

	* src/mini-commander_applet.c (mc_applet_draw): Layout the applet
	differently depending on the panel orientation.
	(mc_orient_changed): added function to track panel orientation changes.
	(mc_pixel_size_changed): follow the panel size using
	size-allocate signal.

2004-06-17  Dennis Smit  <ds@nerds-incorporated.org>

	* src/exec (mc_exec_command, beep): Check gdk_spawn_on_screen,