@@ -1,3 +1,14 @@
+2004-11-10  Mark McLoughlin  <mark@skynet.ie>
+
+	Fix to make old configurations continue to work with
+	newer versions of the applet. See bug #91194.
+
+	* src/mini-commander.schemas.in: add back the deprecated
+	per-applet schemas for macros.
+	
+	* src/mc-install-default-macros.c: (main): install the
+	defaults for the deprecated schemas.
+
 2004-10-30  Davyd Madeley  <davyd@madeley.id.au>
 
 	* src/preferences.c:
